--- a/src/main/webapp/WEB-INF/templates/tag.html
+++ b/src/main/webapp/WEB-INF/templates/tag.html
@@ -7,8 +7,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1><a href="/admin">后台管理</a></h1>
-<h1><a href="/user/main">主页</a></h1>
+<h1><a href="/user/admin">后台管理</a></h1>
+<h1><a href="/">index</a></h1>
 <div th:each="content : ${contentList}">
     <span th:text="${content.getTitle()}"></span>
     <p th:text="${content.getDescription()}"></p>
