added page limit function.

--- a/src/main/webapp/WEB-INF/templates/edit.html
+++ b/src/main/webapp/WEB-INF/templates/edit.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="/plugins/fontawesome-free/css/all.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/plugins/editor.md/css/editormd.min.css">
+    <link rel="stylesheet" type="text/css" href="../plugins/editor.md/css/editormd.min.css">
 
 
     <link rel="stylesheet" type="text/css" href="/plugins/selectize/css/selectize.bootstrap3.css">
@@ -116,7 +116,7 @@
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <label for="slug"
-                                               class="input-group-text"></label>
+                                               class="input-group-text">Slug</label>
                                     </div>
                                     <!-- /btn-group -->
                                     <input type="text"  class="form-control" id="slug" required name="slug"
@@ -170,7 +170,7 @@
                             <div class="form-group">
                                 <label for="blogThumb">文章缩略图直链</label>
                                 <input type="text" class="form-control" id="blogThumb" name="thumb"
-                                       placeholder="建议存储 OSS/JsDelivr....">
+                                       placeholder="">
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -194,14 +194,14 @@
                                 <i class="fa fa-edit"></i>
                                 发布
                             </button>
-                            <a href="/adminTag" target="_blank" class="btn btn-sm btn-info float-left ml-1">
-                                <i class="fas fa fa-plus"></i>
-                                标签
-                            </a>
-                            <a href="/adminCategory" target="_blank" class="btn btn-sm btn-primary float-left ml-1">
-                                <i class="fa fa-plus"></i>
-                                分类
-                            </a>
+<!--                            <a href="/adminTag" target="_blank" class="btn btn-sm btn-info float-left ml-1">-->
+<!--                                <i class="fas fa fa-plus"></i>-->
+<!--                                标签-->
+<!--                            </a>-->
+<!--                            <a href="/adminCategory" target="_blank" class="btn btn-sm btn-primary float-left ml-1">-->
+<!--                                <i class="fa fa-plus"></i>-->
+<!--                                分类-->
+<!--                            </a>-->
                         </div>
 
                         <div class="col-md-1">
